# cas

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
packaging/homebrew/: cas.rb
src/: lib.rs  main.rs
tests/: cli.rs  release_assets.rs
