[package]
name = "cas"
version = "0.0.2"
edition = "2024"
description = "Recursively sync Claude agent files to Codex-compatible paths"
license = "MIT"
readme = "README.md"
repository = "https://github.com/mkusaka/cas"
homepage = "https://github.com/mkusaka/cas"
documentation = "https://github.com/mkusaka/cas"
keywords = ["cli", "agents", "claude", "symlink"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
jwalk = "0.8.1"
